Added missing "col" div in result box

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 			</div>
 			
 			<div class="row">
-				<div id="result" class="col">
+				<div class="col">
+					<div id="result" class="col">
+					</div>
 				</div>
 			</div>
 		</div>
