--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 					<div class="row">
 						<div class="col">
 							<label for="p1p1x">Point 1 X:</label>
-							<input type="text" class="form-control" id="p1p1x" />
+							<input class="form-control" id="p1p1x" type="number" min="0" />
 						</div>
 						<div class="col">
 							<label for="p1p1y">Point 1 Y:</label>
-							<input type="text" class="form-control" id="p1p1y" />
+							<input class="form-control" id="p1p1y" type="number" min="0" />
 						</div>
 						<div class="col">
 							<label for="p1p2x">Point 2 X:</label>
-							<input type="text" class="form-control" id="p1p2x" />
+							<input class="form-control" id="p1p2x" type="number" min="0" />
 						</div>
 						<div class="col">
 							<label for="p1p2y">Point 2 Y:</label>
-							<input type="text" class="form-control" id="p1p2y" />
+							<input class="form-control" id="p1p2y" type="number" min="0" />
 						</div>
 					</div>
 				</div>
@@ -63,19 +63,19 @@
 					<div class="row">
 						<div class="col">
 							<label for="p2p1x">Point 1 X:</label>
-							<input type="text" class="form-control" id="p2p1x" />
+							<input class="form-control" id="p2p1x" type="number" min="0" />
 						</div>
 						<div class="col">
 							<label for="p2p1y">Point 1 Y:</label>
-							<input type="text" class="form-control" id="p2p1y" />
+							<input class="form-control" id="p2p1y" type="number" min="0" />
 						</div>
 						<div class="col">
 							<label for="p2p2x">Point 2 X:</label>
-							<input type="text" class="form-control" id="p2p2x" />
+							<input class="form-control" id="p2p2x" type="number" min="0" />
 						</div>
 						<div class="col">
 							<label for="p2p2y">Point 2 Y:</label>
-							<input type="text" class="form-control" id="p2p2y" />
+							<input class="form-control" id="p2p2y" type="number" min="0" />
 						</div>
 					</div>
 				</div>
